src/objects/Evidence_for_Need__c.object
<CustomObject>
    <description>A document recording the evidence for the need for a specific service</description>
    <fields>
        <fullName>Consequences_of_Closure__c</fullName>
        <description>Consequences of Closure or Rejection</description>
        <inlineHelpText>What would happen to current or potential clients, staff and volunteers if this service didn&apos;t open, or had to shut? Is there a requirement for data/ records to be transferred to a new provider? If so, what, when and how (specific to contracts)?</inlineHelpText>
        <label>Exit Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demography_Comments__c</fullName>
        <inlineHelpText>Describe the numbers of people with dementia in the area covered by this service. if you are targeting a specific client group, provide details of the numbers of people estimated by this client group</inlineHelpText>
        <label>Demographic Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evidence_Overview__c</fullName>
        <inlineHelpText>Include outcomes from consultation activities, information about waiting lists (if appropriate), identified gaps, service user comments, health and social care professional comments.</inlineHelpText>
        <label>Evidence for Need</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relevant_Population__c</fullName>
        <description>The number of people with Dementia in the area covered by the service</description>
        <inlineHelpText>The number of people with Dementia in the area covered by the service</inlineHelpText>
        <label>Number of People with Dementia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Capacity__c</fullName>
        <description>The number of people who could make use of this service</description>
        <inlineHelpText>The number of people who could make use of this service</inlineHelpText>
        <label>Service Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Services__c</referenceTo>
        <relationshipName>Evidence_for_Needs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Population_Size__c</fullName>
        <description>Total population of the area covered by the service</description>
        <inlineHelpText>Total population of the area covered by the service</inlineHelpText>
        <label>Total Population Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Profile__c</fullName>
        <description>Expected or current usage</description>
        <inlineHelpText>Include existing figures (average numbers attending a service, or on staff case load). If the service is new, include expected numbers.</inlineHelpText>
        <label>Service Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isCurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCurrent</label>
        <type>Checkbox</type>
    </fields>
    <label>BDR Evidence for Need</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDR Evidence for Needs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>